plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id "io.gitlab.arturbosch.detekt" version "$version_detekt_tool"
    id 'kotlin-kapt'
    id 'kotlin-parcelize'
    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
}

android {
    namespace 'com.example.quizler'
    compileSdk 33

    compileSdkPreview = "UpsideDownCake"
    defaultConfig {
        applicationId "com.wombatech.quizler"
        minSdk 24
        targetSdk 33
        versionCode 25
        versionName "1.1.21"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables {
            useSupportLibrary true
        }
        multiDexEnabled true
        signingConfig signingConfigs.debug
    }
    defaultConfig {
        Properties properties = loadLocalProperties()

        buildConfigField "String", "GOOGLE_SIGN_IN_CLIENT_ID", properties.getProperty('GOOGLE_SIGN_IN_CLIENT_ID', '"192.168.1.113:2000"')
        manifestPlaceholders += [facebookAppId: "${properties.getProperty('FB_APP_ID', '')}"]
        manifestPlaceholders += [facebookLoginProtocolScheme: "${properties.getProperty('FB_APP_LOGIN_PROTOCOL_SCHEME', '')}"]
        manifestPlaceholders += [facebookClientToken: "${properties.getProperty('FB_CLIENT_TOKEN', '')}"]
    }
    testOptions {
        packagingOptions {
            jniLibs {
                useLegacyPackaging true
            }
        }
    }
    sourceSets {
        main { java.srcDirs = ['src/main/java'] }
        test { java.srcDirs = ['src/test/java'] }
        androidTest { java.srcDirs = ['src/androidTest/java'] }
    }
    configurations {
        ktlint
    }
    detekt {
        toolVersion = "$version_detekt_tool"
        config = files("/Users/urosveljkovic/AndroidStudioProjects/Quizler/config/detekt/detekt.yml")
        buildUponDefaultConfig = true
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {

        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlin {
        jvmToolchain(17)
    }
    buildFeatures {
        buildConfig true
        compose true
        viewBinding true
    }
    composeOptions {
        kotlinCompilerExtensionVersion "$version_compose_compiler"
    }
    packagingOptions {
        resources {
            excludes += '/META-INF/*'
            excludes += "META-INF/*.version"
        }
    }
    androidComponents {
        onVariants(selector().withBuildType("release")) {
            // Exclude AndroidX version files
            it.packaging.resources.excludes.add("META-INF/*.version")
        }
    }
}

dependencies {

    implementation project(":di")
    implementation project(":domain")
    implementation project(":util")

    // AppCompat
    implementation "androidx.appcompat:appcompat:$version_appcompat"
    implementation "androidx.appcompat:appcompat-resources:$version_appcompat"

    // Gogole Sign-in
    implementation platform('com.google.firebase:firebase-bom:31.1.1')
    implementation 'com.google.firebase:firebase-auth-ktx'
    implementation "com.google.android.gms:play-services-auth:$version_google_sign_in"
    implementation 'com.facebook.android:facebook-login:12.0.0'

    implementation('org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4')

    // Play In-App Update
    implementation "com.google.android.play:app-update:$version_in_app_update"
    implementation "com.google.android.play:app-update-ktx:$version_in_app_update"

    // Timber
    implementation "com.jakewharton.timber:timber:$version_timber"

    // Lifecycle services
    implementation "androidx.lifecycle:lifecycle-service:$version_lifecycle_service"
    ktlint "com.pinterest:ktlint:$version_ktlint"

    // Core CTX
    implementation "androidx.core:core-ktx:$version_core_ctx"

    // Jetpack Compose
    implementation "androidx.compose.ui:ui:$version_compose"
    implementation "androidx.constraintlayout:constraintlayout-compose:$version_compose_constraint_layout"
    implementation "androidx.compose.material3:material3:$version_compose_material_3"
    implementation "androidx.compose.animation:animation:$version_compose_animation"
    implementation "androidx.compose.ui:ui-tooling-preview:$version_compose"
    implementation "androidx.compose.runtime:runtime:$version_compose"
    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$version_compose_lifecycle"
    implementation "androidx.lifecycle:lifecycle-runtime-compose:$version_compose_lifecycle_runtime"
    implementation "androidx.activity:activity-compose:$version_compose_activity"
    implementation "androidx.compose.compiler:compiler:$version_compose_compiler"

    // Coroutines
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version_coroutines"
    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version_coroutines"

    // Lifecycle
    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$version_lifecycle"

    // Navigation
    implementation "androidx.navigation:navigation-compose:$version_navigation"

    // Koin
    implementation "io.insert-koin:koin-android:3.4.1"
    implementation "io.insert-koin:koin-androidx-workmanager:3.4.1"
    implementation 'io.insert-koin:koin-androidx-compose:3.4.4'

    // WorkManager
    implementation "androidx.work:work-runtime-ktx:$version_work_manager"

    // Firebase
    implementation platform('com.google.firebase:firebase-bom:31.1.1')
    implementation 'com.google.firebase:firebase-analytics-ktx'
    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.3.2'

    // Test
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation "junit:junit:$version_junit"
    testImplementation "io.mockk:mockk:$version_mockk"
    testImplementation "org.hamcrest:hamcrest-library:$version_hamcrest"
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version_coroutines"
    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.1.9'
    testImplementation 'org.robolectric:robolectric:4.5.1'
    testImplementation 'com.google.truth:truth:1.1.3'


    // Android test
    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
    androidTestImplementation "io.mockk:mockk-android:$version_mockk"
    androidTestImplementation "androidx.test.ext:junit:$version_junit_extensions"
    androidTestImplementation "androidx.test.espresso:espresso-core:$version_espresso_core"
    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$version_compose"
    androidTestImplementation "androidx.work:work-testing:2.8.1"
    debugImplementation "androidx.compose.ui:ui-tooling:$version_compose"


    debugImplementation("androidx.compose.ui:ui-test-manifest:$version_compose")
    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
}

private Properties loadLocalProperties() {
    Properties properties = new Properties()
    if (project.rootProject.file('local.properties').canRead()) {
        properties.load(project.rootProject.file("local.properties").newDataInputStream())
    } else {
        throw new GradleException("Could not read local.properties from " + project.rootProject.path)
    }
    properties
}

kapt {
    correctErrorTypes true
}

task ktlint(type: JavaExec, group: "verification") {
    description = "Check Kotlin code style."
    classpath = configurations.ktlint
    mainClass.set("com.pinterest.ktlint.Main")
    args "src/**/*.kt"
}
check.dependsOn ktlint

task ktlintFormat(type: JavaExec, group: "formatting") {
    description = "Fix Kotlin code style deviations."
    classpath = configurations.ktlint
    mainClass.set("com.pinterest.ktlint.Main")
    args "-F", "src/**/*.kt"
    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
}